--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="close-nav"><button>×</button></div>
                     <nav>
                          <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#"> Classes </a></li>
-                            <li><a href="#"> Pricing </a></li>
-                            <li><a href="#">Teachers  </a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#classes"> Classes </a></li>
+                            <li><a href="#pricing"> Pricing </a></li>
+                            <li><a href="#teachers">Teachers  </a></li>
                             <button>
                                 <a href="#"> Book a class </a>
                             </button>
@@ -70,7 +70,7 @@
         <div >
             <video src="herovid.mp4"  class="founder-img" autoplay muted loop ></video>
         </div>
-        <div class="founder-text">
+        <div class="founder-text" id="about">
             <h2 class="founder-header box">
                     Our Founding Philosophy
             </h2>
@@ -88,7 +88,7 @@
 <!-- founder end -->
 
 <!-- class descriptions slider start -->
-<div class="class-descriptions">
+<div class="class-descriptions" id="classes">
     <h2 class="main-description-header"> Choose your class type  </h2>
 </div>
 
@@ -243,7 +243,7 @@ Ashtanga yoga classes are typically fast-paced and challenging, with a focus on 
 </div>
 <!-- class descriptions slider end -->
 
-<section class="plansandpricing">
+<section class="plansandpricing" id="pricing">
     <h2 class="main-description-header" style="color:#514D49 ; text-align: center; padding-top: 60px;"> Plans and Pricing  </h2>
 <div class="plans-ctnr">
     <div class="plan">
