--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Ashtanga yoga classes are typically fast-paced and challenging, with a focus on 
                 </div>
 
                 <div class="footer-info">
-                <img src="src/Screen Shot 2023-06-05 at 11.05.20 PM.png" style="max-height: 400px; padding-top: 50px; "  alt="">
+                <!-- <img src="src/Screen Shot 2023-06-05 at 11.05.20 PM.png" style="max-height: 400px; padding-top: 50px; "  alt=""> -->
 
                 <p class="footer-text"> 
                     123 Kendrick St.
